# jira_mcp

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  configure  manifest.base.json
.devcontainer/: Dockerfile  devcontainer.json
jira_api/: .gitignore  CLAUDE.md  Cargo.toml  build.rs
packaging/: CLAUDE.md  manifest.json
src/: main.rs
src/server/: jira.rs  mod.rs  server.rs  tool_field.rs  tool_issue.rs  tool_project.rs  tool_search.rs  tool_user.rs  tool_worklog.rs  util.rs
