[package]
name = "jira_mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["std"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
jira_api = { git = "https://github.com/borutlukic/jira_api.git", branch = "dc_11003" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmcp = { version = "1.2.0", features = ["server", "client", "macros", "transport-io" ] }
tokio = { version = "1.50.0", features = ["macros", "rt", "rt-multi-thread", "io-std", "signal"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing = "0.1.44"
