[package]
name = "jira_api"
version = "0.1.0"
edition = "2024"

[build-dependencies]
openapi-to-rust = "0.1.1"
serde_json = "1.0"
ureq = "2"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded = "0.7"
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-tracing.workspace = true
